source customers stg_erp__clientes dim_clientes

--- a/models/marts/dim_produtos.yml
+++ b/models/marts/dim_produtos.yml
@@ -2,7 +2,7 @@ version: 2
 
 models:
     - name: dim_produtos
-      description: Essa é a dimensão com informação dos clientes da northwind
+      description: Essa é a dimensão com informação dos produtos da northwind
       columns:
           - name: pk_produto	
             description: chave primária da dimensão produtos
