--- a/models/staging/erp_northwind/sources.yml
+++ b/models/staging/erp_northwind/sources.yml
@@ -7,4 +7,6 @@ sources:
     tables:
       - name: products 
       - name: categories
-      - name: suppliers    
+      - name: suppliers
+      - name: customers
+
